@@ -6,9 +6,9 @@ use Test::Exception;
 use_ok ('npg_tracking::glossary::composition::factory::attributes');
 
 subtest 'object with one attr missing' => sub {
-  plan tests => 2;
+  plan tests => 3;
 
-  package npg_tracking::composition::component::test;
+  package npg_tracking::composition::component::testA;
   use Moose;
   use MooseX::Storage;
   with Storage( 'traits' => ['OnlyWhenBuilt'],
@@ -17,10 +17,10 @@ subtest 'object with one attr missing' => sub {
   has 'attr_2' => (isa => 'Str', is => 'ro', required => 1,);
   1;
 
-  package npg_tracking::composition::factory::test1;
+  package npg_tracking::composition::factory::testA;
   use Moose;
   with 'npg_tracking::glossary::composition::factory::attributes' =>
-    {component_class => 'npg_tracking::composition::component::test'};
+    {component_class => 'npg_tracking::composition::component::testA'};
 
   has 'composition' => (
     is         => 'ro',
@@ -35,19 +35,87 @@ subtest 'object with one attr missing' => sub {
 
   package main;
 
-  my $t = npg_tracking::composition::factory::test1->new(attr_1 => 1);
-  throws_ok { $t->composition }
-    qr/Attribute \(attr_.\) does not pass the type constraint/,
+  my $tA = npg_tracking::composition::factory::testA->new();
+  throws_ok { $tA->composition }
+    qr/Attribute \(attr_1\) does not pass the type constraint/,
     'error when required object attribute is not defined';
-  TODO: { local $TODO = 'Moose on Perl < 5.22 not reporting correct attribute failure?';
-  throws_ok { $t->composition }
+
+  package npg_tracking::composition::component::testB;
+  use Moose;
+  use MooseX::Storage;
+  with Storage( 'traits' => ['OnlyWhenBuilt'],
+                'format' => 'JSON' );
+  has 'attr_1' => (isa => 'Int', is => 'ro', required => 0,);
+  has 'attr_2' => (isa => 'Str', is => 'ro', required => 1,);
+  1;
+
+  package npg_tracking::composition::factory::testB;
+  use Moose;
+  with 'npg_tracking::glossary::composition::factory::attributes' =>
+    {component_class => 'npg_tracking::composition::component::testB'};
+
+  has 'composition' => (
+    is         => 'ro',
+    isa        => 'npg_tracking::glossary::composition',
+    lazy_build => 1,
+  );
+  sub _build_composition {
+    my $self = shift;
+    return $self->create_composition();
+  }
+  1;
+
+  package main;
+
+  my $tB = npg_tracking::composition::factory::testB->new();
+  throws_ok { $tB->composition }
     qr/Attribute \(attr_2\) does not pass the type constraint/,
     'error when required object attribute is not defined';
+
+  package npg_tracking::composition::component::testC;
+  use Moose;
+  use MooseX::Storage;
+  with Storage( 'traits' => ['OnlyWhenBuilt'],
+                'format' => 'JSON' );
+  has 'attr_1' => (isa => 'Maybe[Int]', is => 'ro', required => 1,);
+  has 'attr_2' => (isa => 'Str', is => 'ro', required => 1,);
+  1;
+
+  package npg_tracking::composition::factory::testC;
+  use Moose;
+  with 'npg_tracking::glossary::composition::factory::attributes' =>
+    {component_class => 'npg_tracking::composition::component::testC'};
+
+  has 'composition' => (
+    is         => 'ro',
+    isa        => 'npg_tracking::glossary::composition',
+    lazy_build => 1,
+  );
+  sub _build_composition {
+    my $self = shift;
+    return $self->create_composition();
   }
+  1;
+
+  package main;
+
+  my $tC = npg_tracking::composition::factory::testC->new();
+  throws_ok { $tC->composition }
+    qr/Attribute \(attr_2\) does not pass the type constraint/,
+    'error when required object attribute is not defined';
 };
 
 subtest 'object with all required attributes' => sub {
    plan tests => 5;
+
+  package npg_tracking::composition::component::test;
+  use Moose;
+  use MooseX::Storage;
+  with Storage( 'traits' => ['OnlyWhenBuilt'],
+                'format' => 'JSON' );
+  has 'attr_1' => (isa => 'Int', is => 'ro', required => 1,);
+  has 'attr_2' => (isa => 'Str', is => 'ro', required => 1,);
+  1;
 
   package npg_tracking::composition::factory::test2;
   use Moose;
